contrib: fixed script, added results of model checking (-dfid 8, java oom)